--- a/src/components/SideMenu/_sideMenu.scss
+++ b/src/components/SideMenu/_sideMenu.scss
@@ -6,6 +6,8 @@
     background-color: #515351;
     width: 50%;
     padding: 3rem;
+    height: 55rem;
+    overflow-y: scroll;
   }
 
   &__submenu {
