--- a/src/pages/Main/_main.scss
+++ b/src/pages/Main/_main.scss
@@ -29,7 +29,7 @@
       position: fixed;
       grid-row: 1 / 2;
       z-index: 1000;
-      top: 3rem;
+      top: 2rem;
       transform: translateX(-52%);
       transition: all .3s;
 
